# fewbit

./: .clang-format  .dockerignore  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE  README.md  data.py  mnist.py  pyproject.toml  setup.cfg  setup.py  test-ext.py  test-lib.py
benchmark/: README.md  bench-linear.py  bench-roberta.py  benchmark.py
ci/: build-wheel.sh  build-wheels.sh
ci/release/: Dockerfile  README.md  build-wheel.sh
data/: mnist.sh
doc/: fewbit.bib
experimental/: tensorboard.py
fewbit/: CMakeLists.txt  __init__.py  __main__.py  activation.py  activation_test.py  approx.py  approx_test.py  cli.py  codec.h  codec_test.cc  compat.py  fewbit.cc  fewbit.h  fft.py  fft_test.py  functional.py  functional_test.py  gelu.cc  gelu.cu  gelu.h  module.py  modules.py  python_module.cc  torch_library.cc  util.py  util_test.py
fewbit/cpu/: CMakeLists.txt  codec_test.cc  gelu.cc  gelu.h
fewbit/cuda/: CMakeLists.txt  activation.cc  activation.h  codec.cu  codec.h  codec_test.cu  gelu.cc
fewbit/data/: builtin.npz
fewbit/functional/: __init__.py  activations.py  activations_test.py  linear.py  variance.py
fewbit/modules/: __init__.py  activations.py  linear.py  linear_test.py  variance.py
notebooks/: custom_gelu_dynamic_programming.py  exp-fine-tuning-glue-post.py  exp-fine-tuning-glue.py  memory-usage-roberta.py
notebooks/few-bit-backward/: benchmark-quantisation.py  exp-fine-tuning-glue.py  exp-index.py  memory-usage-operation-only.py
notebooks/randomized-backward/: exp-fine-tuning-glue.py
notebooks/rmm/: benchmark-post.ipynb  exp-fine-tuning-glue.py  exp-matmul-post.ipynb  exp-variance-estimation-post.ipynb  exp-variance-estimation.ipynb
tools/: quantize-builtins.sh  quantize-hardswish.py
