# See PEP-517 and PEP-518 for details.

[build-system]
requires = ["cmake", "setuptools", "setuptools_scm>=3.4", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"
show_column_numbers = true
show_error_codes = true
show_error_context = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

[tool.yapf]
based_on_style = "pep8"
