# See links below for documentaion notes.
#
# https://packaging.python.org/guides/distributing-packages-using-setuptools/
# https://setuptools.readthedocs.io/en/latest/setuptools.html

[metadata]
name = few-bit-backward
url = https://github.com/daskol/few-bit-backward
description = Compression schema for gradients of activations in backward pass
license = BSD 3-Clause License
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Linux
project_urls =
    Documentation = https://github.com/daskol/few-bit-backward/wiki
    Source = https://github.com/daskol/few-bit-backward/issues
    Tracker = https://github.com/daskol/few-bit-backward/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: GPU
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Typing :: Typed

[options]
zip_safe = False
packages = find:
python_requires = >=3.8,<4
install_requires =
    numpy
    torch>=1.10.0
tests_require = pytest>=6.0

[options.extras_require]
experiments =
    datasets>=1.17.0
    tokenizers>=0.10.3
    transformers>=4.15.0

[options.package_data]
fewbit = data/*.npz

[options.entry_points]
console_scripts =
    fewbit = fewbit.cli:main

[options.packages.find]
where = .
